# esm-msr

./: LICENSE-ESM.md  NOTICE.md  README.md  pyproject.toml
ChimeraX-ESM_MSR_Visualizer/: bundle_info.xml
ChimeraX-ESM_MSR_Visualizer/src/: __init__.py  tool.py
analysis_notebooks/: ablation_table.ipynb  analysis_utils_msr.py  compare_supervised_domainome_new.ipynb
data/: ALL_seqs.fasta  splits_feb19_tsuboyama.csv  splits_feb19_tsuboyama.pkl  splits_feb19_tsuboyama_test_doubles.csv  splits_feb19_tsuboyama_test_doubles.pkl  splits_feb19_tsuboyama_test_synthetic.csv  splits_feb19_tsuboyama_test_synthetic.pkl
data/preprocessed/: k2369_mapped.csv  k3822_mapped.csv  ptmul_filtered_mapped.csv  ptmul_mapped.csv  ptmuld_mapped.csv  q3421_mapped.csv  s461_mapped.csv  s669_mapped.csv  ssym_mapped.csv
data/weights/: README.txt
inference_scripts/: esm3_zs_testing.py  esm_msr_testing.py  proteinmpnn_testing.py  thermompnnd_testing.py
preprocessing/: domainome_preprocessing.ipynb  preprocess.py  preprocess_tsuboyama.py  split_tsuboyama.py
src/esm_msr/: data.py  inference.py  losses.py  models.py  training.py  utils.py
